category and brand made nullable

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:vjZ1uv6dzhhuDCZZ2p0bJHa2GxaJTiB+aLrcOeFYXEU=
+APP_KEY=base64:FDZV3a23x122hKSW/eBCUM7l5rsFZpK1LBxq1EVRLaE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=shaun
+DB_DATABASE=pEcommerce
 DB_USERNAME=root
 DB_PASSWORD=
 
